# The-Secret-Formula

./: Makefile  README.md  ai_meal_planner.py  app.py  models.py  pyproject.toml  rival_bot.py  routes.py
static/css/: style.css
static/js/: app.js
templates/: base.html  complete_profile.html  dashboard.html  index.html  login.html  meal_plan.html  profile.html  signup.html  tracker.html
