[tool.poetry]
name = "ai-meal-planner"
version = "0.1.0"
description = "An interactive diet companion web app with AI-powered meal planning and gamified fitness motivation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-dance = "^7.1.0"
gunicorn = "^23.0.0"
openai = "^1.82.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"
werkzeug = "^3.1.3"
email-validator = "^2.2.0"
oauthlib = "^3.2.2"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:app"
